<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">返回</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码</string>
    <string name="account">注册账号</string>
    <string name="find">找回密码</string>
    <string name="email">邮箱</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载……</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_tab_host">TabHostActivity</string>

</resources>
