<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <com.cs.test5.widget.WidgetTitleView
        android:id="@+id/title_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/login_input">
        
        <LinearLayout 
            android:id="@+id/layout_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/login_label_style"/>
            
            <EditText 
                android:id="@+id/input_email"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@null"
                style="@style/LoginStyle"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_blockbg_divider"
            android:contentDescription="@string/app_name"/>
        
        <LinearLayout 
            android:id="@+id/layout_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                style="@style/login_label_style"/>
            
            <EditText 
                android:id="@+id/input_username"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@null"
                style="@style/LoginStyle"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_blockbg_divider"
            android:contentDescription="@string/app_name"/>
        
        <LinearLayout 
            android:id="@+id/layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/login_label_style"/>
            
            <EditText 
                android:id="@+id/input_password"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:background="@null"
                style="@style/LoginStyle"/>
        </LinearLayout>
    </LinearLayout>

    <Button 
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_below="@id/layout_input"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_login"
        style="@style/btn_login_style"
        android:text="@string/account"/>
</RelativeLayout>
